# advenced_web

./: .env.example  .gitignore  LANGGRAPH_IMPLEMENTATION.md  README.md  docker-compose.yml  generate_presentation_pdf.py  langgraph_report.tex  mcp_report.tex
.claude/: settings.local.json
backend/: pom.xml
backend/src/main/resources/: application-h2.properties  application.properties
backend/src/main/resources/data/: README.md  turkey_active_faults.geojson
crew/: .env.example  .gitignore  api.py  pyproject.toml
crew/src/seismic_crew/: __init__.py  crew.py  main.py
crew/src/seismic_crew/config/: agents.yaml  tasks.yaml
crew_screenshots/: rename_screenshots.ps1
frontend/: angular.json  package-lock.json  package.json
frontend/src/: styles.css
frontend/src/app/: app.config.ts  app.css  app.routes.ts
frontend/src/app/core/: ai-api.ts  auth-api.ts  auth.guard.ts  auth.interceptor.ts  crew-api.ts  earthquake-api.ts  exposure-api.ts  fault-line-api.ts  geocode-api.ts  historical-api.ts  mcp-api.ts  profile-api.ts  safety-api.ts  soil-zone-api.ts
frontend/src/app/pages/ai-assistant/: ai-assistant.css  ai-assistant.html  ai-assistant.ts
graph/: .env.example  README.md  pyproject.toml  run_server.py  test_endpoints.py
graph/src/seismic_graph/: __init__.py  api.py  checkpoint.py  config.py  llm.py  spring_client.py
graph/src/seismic_graph/graphs/: building_risk_graph.py  chat_graph.py  notify_graph.py  quake_detail_graph.py  safe_check_graph.py
graph/src/seismic_graph/mcp/: __init__.py  seismic_client.py  seismic_server.py
infra/postgres/: init.sql
(+128 files in other folders)
