[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seismic-graph"
version = "0.1.0"
description = "LangGraph orchestration service for Seismic Command"
requires-python = ">=3.10,<3.13"
dependencies = [
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=3.0.0",
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "psycopg[binary,pool]>=3.2.0",
    "pydantic>=2.5.0",
    "langsmith>=0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/seismic_graph"]
